syntax = "proto3";
option java_multiple_files = true;
package org.gersty.grpcspring.helloworld;

message Person {
    string firstName = 1;
    string lastName = 2;
}

message Greeting {
    string messsage = 1;
}

service HelloWorldService {
    rpc sayHello(Person) returns (Greeting);
}